[package]
name = "subir_archivo"
version = "0.1.0"
authors = ["HugoNex <thenex@gmail.com>"]
edition = "2021"

[dependencies]
js-sys = "0.3"
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
base64 = "0.21.4"
gloo = "0.10"

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]
